Updates for Projectvw overall template

--- a/_posts/2022-09-09-jacked-up.md
+++ b/_posts/2022-09-09-jacked-up.md
@@ -7,7 +7,7 @@ image: 2022/jackedup.jpg
 categories: ''
 author: chris
 comments: false
-featured: true
+featured: false
 ---
 I found this photo while going through old files (I never throw anything away, or delete). After a quick google search, I can't find it anywhere else on the web, so I figured I would post it here.
 
