--- a/_posts/2022-09-09-jacked-up.md
+++ b/_posts/2022-09-09-jacked-up.md
@@ -4,7 +4,7 @@ title: VW Jacked Up Graphic
 date: '2022-09-9T10:00:00+00:00'
 permalink: "/vw-jacked-up"
 image: 2022/jackedup.jpg
-categories: ''
+categories: [ vw, decal, graphic ]
 author: chris
 comments: false
 featured: false
